<resources>
    <string name="app_name">Timetable</string>
    <string name="text_login_page">Login Page</string>
    <string name="text_register_page">Register Page</string>
    <string name="text_fullName">Full Name</string>
    <string name="text_email">Email Address</string>
    <string name="text_password">Password</string>
    <string name="text_teacher">Teacher</string>
    <string name="text_student">Student</string>
    <string name="text_login_button">Login</string>
    <string name="text_register_button">Register</string>
    <string name="text_textview_register">Not Registered?</string>
    <string name="text_textview_password">Forgot Password?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="hint_about">About</string>
    <string name="text_logout_button">Logout</string>
    <string name="button_previous_date">‹</string>
    <string name="button_next_date">›</string>
    <string name="textview_module">Module</string>
    <string name="textview_room">Room</string>
    <string name="textview_group">Group</string>
    <string name="textview_semester">Semester</string>
    <string name="textview_day">Date</string>
    <string name="textview_hour">Hour</string>
    <string name="content_description_students">Show the list of students</string>
    <string name="update_timetable">Update Timetable</string>
    <string name="hint_module_name">Module Name</string>
    <string name="hint_course_name">Course Name</string>
    <string name="hint_credits">Credits</string>
    <string name="hint_compulsory">Compulsory</string>
    <string name="button_add_module">Add Module</string>
    <string name="hint_room_name">Room Name</string>
    <string name="hint_location_name">Location Name</string>
    <string name="hint_capacity_number">Capacity Number</string>
    <string name="button_add_room">Add Room</string>
    <string name="hint_group_name">Group Name</string>
    <string name="button_select_students">Select Students</string>
    <string name="button_create_group">Create Group</string>
    <string name="hint_students_list">Students List</string>
    <string name="hint_previous_date">Previous Date Button</string>
    <string name="hint_next_date">Next Date Button</string>
    <string name="hint_list_module_to_timetable">List Module to Timetable</string>
    <string name="button_edit_listed_module">Edit Listed Module</string>
    <string name="radio_button_dark_mode_off">Off</string>
    <string name="radio_button_dark_mode_on">On</string>
    <string name="radio_button_dark_mode_system">System</string>
    <string name="hint_textview_dark_mode">If System is selected, MyTimetable will set the theme according to the device\'s system settings.</string>
    <string name="hint_about_introduction">A dissertation submitted to the University of Greenwich in partial fulfilment of the requirements for the Degree of</string>
    <string name="hint_about_degree">Master of Science\nin\nComputing and Information Systems</string>
    <string name="hint_about_programme">Computing and Information Systems</string>
    <string name="hint_about_title">Enhancing university timetable using software:\nAn Android Development Approach</string>
    <string name="hint_about_student">Student: Radu Adascalitei\nStudent ID: 001103065</string>
    <string name="hint_about_supervisor">Supervisor: Dr. Maria Pretorius\nSubmission Date: September 2021</string>
</resources>