<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".student_main.ui.about.AboutFragment"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <com.google.android.material.textview.MaterialTextView
        style="@style/HeaderTextStyle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/hint_about_introduction"
        android:textAlignment="center" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/HeaderTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/hint_about_degree"
        android:textAlignment="center" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/HeaderTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/hint_about_title"
        android:textAlignment="center" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/HeaderTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="64dp"
        android:text="@string/hint_about_student"
        android:textAlignment="center" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/HeaderTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="64dp"
        android:text="@string/hint_about_supervisor"
        android:textAlignment="center" />

</com.google.android.material.circularreveal.CircularRevealLinearLayout>