<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".theme.DarkModeActivity">

    <RadioGroup
        android:id="@+id/radio_group_dark_mode"
        style="@style/Widget.AppCompat.CompoundButton.RadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        android:theme="@style/ColorSecondaryBlack">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_button_dark_mode_off"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/radio_button_dark_mode_off"
            android:textSize="16sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_button_dark_mode_on"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/radio_button_dark_mode_on"
            android:textSize="16sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_button_dark_mode_system"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/radio_button_dark_mode_system"
            android:textSize="16sp" />

    </RadioGroup>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group_dark_mode"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/hint_textview_dark_mode"
        android:textAlignment="viewStart" />

</com.google.android.material.circularreveal.CircularRevealRelativeLayout>