<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".teacher_main.ui.create_group.CreateGroupFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_group_name_create_group_page"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="51dp"
        app:boxBackgroundMode="outline">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_group_name"
            android:inputType="textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_course_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/spinner_course_name_create_group_page"
        android:layout_marginStart="35dp"
        android:labelFor="@id/spinner_course_name_create_group_page"
        android:text="@string/hint_course_name"
        android:textAlignment="center"
        android:textSize="14sp" />

    <Spinner
        android:id="@+id/spinner_course_name_create_group_page"
        style="@android:style/Widget.Material.Light.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/layout_group_name_create_group_page"
        android:layout_marginHorizontal="32dp"
        android:spinnerMode="dialog"
        app:boxBackgroundMode="outline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_select_students_create_group_page"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@id/spinner_course_name_create_group_page"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="16dp"
        android:text="@string/button_select_students" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_students_list_create_group_page"
        style="@style/HeaderTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_select_students_create_group_page"
        android:layout_marginHorizontal="36dp"
        android:text="@string/hint_students_list"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save_create_group_page"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@id/textView_students_list_create_group_page"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/button_create_group" />

</com.google.android.material.circularreveal.CircularRevealRelativeLayout>

