<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".login.LoginActivity">

    <com.google.android.material.circularreveal.CircularRevealRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_login_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="32dp"
                android:theme="@style/ColorPrimaryBlack"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/text_email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_login_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:theme="@style/ColorPrimaryBlack"
                app:boxBackgroundMode="outline"
                app:endIconMode="password_toggle"
                app:errorIconDrawable="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/text_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_login"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:paddingHorizontal="40dp"
                android:paddingVertical="16dp"
                android:text="@string/text_login_button"
                android:theme="@style/ColorPrimaryBlack" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/button_register"
                style="@style/HeaderTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/text_textview_register"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/button_reset_password"
                style="@style/HeaderTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/text_textview_password"
                android:textSize="16sp" />
        </com.google.android.material.circularreveal.CircularRevealLinearLayout>

        <ProgressBar
            android:id="@+id/login_progress_bar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_layout"
            android:layout_centerHorizontal="true"
            android:foregroundGravity="center_horizontal"
            android:indeterminate="true"
            android:theme="@style/ColorSecondaryBlack"
            android:visibility="invisible" />


    </com.google.android.material.circularreveal.CircularRevealRelativeLayout>

</ScrollView>


